# docker-mailserver-admin

./: .gitignore  Caddyfile  Dockerfile  LICENSE  README.md  admin-api-supervisor.conf  openapi.yaml  pyproject.toml  tox.ini
docker_mailserver_admin_api/: __init__.py
docker_mailserver_admin_api/models/payloads/: __init__.py  change_password_payloads.py
docker_mailserver_admin_api/routers/admin/: users.py
docker_mailserver_admin_api/routers/self_service/: __init__.py
docker_mailserver_admin_api/security/: __init__.py  api_key.py
tests/unit_tests/: conftest.py  test_admin_api_for_users.py  test_security.py
